# CMinx

./: .buildinfo  .coverage  .gitignore  .travis.yml  .zendo.json  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  MANIFEST.in  README.md  README.rst  _config.yml  about.html  cminx.spec  codecov.yml  config.html  defaults.ini  full_example.html  genindex.html  index.html  installation.html  main.py  main.spec  objects.inv  paper.bib  paper.md  py-modindex.html  pyproject.toml  quickstart.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  setup.py.in  usage.html
.github/: .licenserc.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: add_licenses.yaml  add_licenses_master.yaml  cmake_install.yaml  deploy_docs.yaml  format_python.yaml  license.yaml  pip_install.yaml  tag_and_release.yaml  test_pip_install.yaml
_sources/: about.rst.txt  full_example.rst.txt  quickstart.rst.txt  usage.rst.txt
_sources/developer/: api.rst.txt  documentation.rst.txt  index.rst.txt
_sources/developer/.autosummary/: cminx.aggregator.rst.txt  cminx.config.rst.txt  cminx.document.rst.txt  cminx.document_single_file.rst.txt  cminx.documentation_types.rst.txt  cminx.documenter.rst.txt  cminx.exceptions.rst.txt  cminx.main.rst.txt  cminx.parser.CMakeLexer.rst.txt  cminx.parser.CMakeListener.rst.txt  cminx.parser.CMakeParser.rst.txt  cminx.parser.CMakeVisitor.rst.txt  cminx.parser.aggregator.rst.txt  cminx.rstwriter.rst.txt
_sources/developer/cmake/: cminx.rst.txt  find_python_module.rst.txt  get_cmaize.rst.txt  get_cmake_test.rst.txt  get_cpp.rst.txt  get_version_from_git.rst.txt  index.rst.txt  python_virt_env.rst.txt  versions.rst.txt
_sources/documenting/: function.rst.txt  macro.rst.txt
_static/: documentation_options.js
cmake/: cminx.cmake  find_python_module.cmake  get_cmaize.cmake  get_cmake_test.cmake  get_cpp.cmake  get_version_from_git.cmake  python_virt_env.cmake  versions.cmake
cmake/templates/: CMinxConfig.cmake.in  cminx-config.cmake.in
cmakedoc/: __init__.py  cmake_regexer.py  documenter.py  parse_block_comment.py  parse_signature.py  parse_single_line.py  parser.py  rst_validator.py  rstwriter.py
cmakedoc/parser/: CMake.g4  CMakeLexer.py  CMakeParser.py  CMakeVisitor.py  __init__.py  aggregator.py
cminx/: __init__.py  aggregator.py  cminx.cmake  config.py  config_default.yaml  documentation_types.py  documenter.py  rstwriter.py
cminx/parser/: CMake.g4  CMakeLexer.interp  CMakeListener.py  CMakeVisitor.py  __init__.py  aggregator.py
developer/: api.html  ci.html  dependencies.html  documentation.html  index.html  overview.html  repo_structure.html
developer/.autosummary/: cminx.aggregator.html  cminx.config.html  cminx.document.html  cminx.document_single_file.html  cminx.documentation_types.html  cminx.documenter.html  cminx.exceptions.html  cminx.main.html  cminx.parser.CMakeLexer.html  cminx.parser.CMakeListener.html  cminx.parser.CMakeParser.html  cminx.parser.CMakeVisitor.html  cminx.parser.aggregator.html  cminx.rstwriter.html
developer/cmake/: cminx.html  find_python_module.html  get_cmaize.html  get_cmake_test.html  get_cpp.html  get_version_from_git.html  index.html  python_virt_env.html  versions.html
developer/cmake/templates/: CMinxConfig.html  CMinxConfigVersion.html  index.html
docs/: Makefile  README.rst
docs/source/: about.rst  api.rst  conf.py  config.rst  documenting.rst  full_example.rst  index.rst  installation.rst  quickstart.rst  usage.rst
docs/source/developer/: api.rst  ci.rst  dependencies.rst  documentation.rst  index.rst  overview.rst  repo_structure.rst
docs/source/documenting/: cmaketest.rst  ctest_add_test.rst  function.rst  index.rst  macro.rst  module.rst  types_of_comments.rst  variable.rst
documenting/: cmaketest.html  ctest_add_test.html  function.html  index.html  macro.html  module.html  types_of_comments.html  variable.html
examples/: aggregator_example.py  example.cmake  rst_validator_example.py  rstwriter_example.py
examples/sphinx/examples/: example.rst
examples/sphinx/source/: conf.py  index.rst
src/: main.py
src/cminx/: __init__.py  aggregator.py  config.py  config_default.yaml  documentation_types.py  documenter.py  exceptions.py  rstwriter.py
src/cminx/parser/: CMake.g4  CMake.interp  CMake.tokens  CMakeLexer.interp  CMakeLexer.py  CMakeLexer.tokens  CMakeListener.py  CMakeParser.py  CMakeVisitor.py  __init__.py  aggregator.py
templates/: CMinxConfig.cmake  CMinxConfigVersion.cmake
tests/: .coveragerc  CMakeLists.txt  README.rst  context.py  helpers.py  rst_validator.py  test_aggregator.py  test_all.py  test_cmake_regexer.py  test_documenter.py  test_error_listener.py  test_init.py  test_lexer.py  test_parse_block_comment.py  test_parse_signature.py  test_parse_single_line.py  test_parser.py  test_rstwriter.py
tests/cmake/: gen_rst.cmake
tests/cmake_input/: example.cmake
tests/examples/: aggregator_example.py  example.cmake  rst_validator_example.py  rstwriter_example.py
tests/examples/configs/: exclude_filters_config.yaml  exclude_input_file_config.yaml  no_auto_exclude_config.yaml  no_include_undocumented_config.yaml
tests/test_samples/: __init__.py  add_test_and_func_after.cmake  advanced_function.cmake  advanced_macro.cmake  advanced_module.cmake  basic_function.cmake  basic_macro.cmake  basic_module.cmake  commented_out_function.cmake  ct_test.cmake  ctest_add_test.cmake  example.cmake  no-doc_directive.cmake  option.cmake  quickstart.cmake  test_samples.py  undocumented_commands.cmake  undocumented_option_no_default.cmake  variable.cmake
tests/test_samples/corr_rst/: add_test_and_func_after.rst  advanced_function.rst  advanced_macro.rst  advanced_module.rst  basic_function.rst  basic_macro.rst  basic_module.rst  commented_out_function.rst  ct_test.rst  (+9 more)
tests/unit_tests/: __init__.py  context.py  rst_validator.py  test_aggregator.py  test_config.py  test_documenter.py  test_error_listener.py  test_init.py  test_lexer.py  test_parser.py  test_rstwriter.py
(+17 files in other folders)
