[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CMinx"
version = "1.0.0"
authors = [
    { name = "CMakePP", email="rrichard@ameslab.gov" },
]
description = "Generates Sphinx-flavored reST from CMake API documentation."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
