# Copyright 2022 CMakePP
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools>=41", "wheel", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"


[project]
name = "CMinx"
dynamic = ["version"]
description = "Documentation Generator for the CMake Language"
readme = "README.rst"
license = {file = "LICENSE"}
authors = [{name = "CMakePP"}]
keywords = ["CMake", "Documentation"]
classifiers = ["Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Build Tools"
]
urls = {"GitHub" = "https://github.com/CMakePP/CMinx"}
scripts = {"cminx" = "cminx:main"}
dependencies = ["antlr4-python3-runtime==4.7.2",
    "confuse>=1.7",
    "pathspec>=0.9.0"
]


[project.optional-dependencies]
testing = ["coverage", "docutils>=0.10", "pytest", "pytest-cov"]


[tool.setuptools]
packages = ["cminx"]
package-dir = {"" = "src"}
include-package-data = true


[tool.setuptools-git-versioning]
enabled = true
dev_template = "{tag}"
dirty_template = "{tag}"
